provarAnt/00D190000000ZY2EAM/objects/Rate_Card_Detail__c.object
<CustomObject>
    <description>This object has all details when the Rate Card/Derived Price is calculated using the pricing tool</description>
    <fields>
        <fullName>Account_Zip_Code__c</fullName>
        <label>Account Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertising_Consultant__c</fullName>
        <label>Advertising Consultant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <description>Discount % to calculate the Sale price</description>
        <inlineHelpText>Discount % to calculate the Sale price</inlineHelpText>
        <label>Discount Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Geography_Sub__c</fullName>
        <label>Geography Sub</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Listing_Price_1__c</fullName>
        <description>Individual Listing Price for Type 1</description>
        <inlineHelpText>Individual Listing Price for Type  1</inlineHelpText>
        <label>Individual Listing Price 1</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Listing_Price_2__c</fullName>
        <description>Individual Listing Price for Type 2</description>
        <inlineHelpText>Individual Listing Price for Type 2</inlineHelpText>
        <label>Individual Listing Price 2</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Individual_Listing_Price_3__c</fullName>
        <description>Individual Listing Price for Type 3</description>
        <inlineHelpText>Individual Listing Price for Type 3</inlineHelpText>
        <label>Individual Listing Price 3</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Exponent__c</fullName>
        <label>Inventory Exponent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <label>Lot Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_1__c</fullName>
        <description>Type/Make</description>
        <inlineHelpText>Type/Make</inlineHelpText>
        <label>Make 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_2__c</fullName>
        <description>Type/Make</description>
        <inlineHelpText>Type/Make</inlineHelpText>
        <label>Make 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_3__c</fullName>
        <description>Type/Make</description>
        <inlineHelpText>Type/Make</inlineHelpText>
        <label>Make 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Factor_1__c</fullName>
        <label>Make Factor 1</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Factor_2__c</fullName>
        <label>Make Factor 2</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make_Factor_3__c</fullName>
        <label>Make Factor 3</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Base_Price_1__c</fullName>
        <label>New Base Price 1</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Base_Price_2__c</fullName>
        <label>New Base Price 2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Base_Price_3__c</fullName>
        <label>New Base Price 3</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Factor__c</fullName>
        <label>New Factor</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Flat_Price_1__c</fullName>
        <label>New Flat Price 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Flat_Price_2__c</fullName>
        <label>New Flat Price 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Flat_Price_3__c</fullName>
        <label>New Flat Price 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code</description>
        <inlineHelpText>Product Code</inlineHelpText>
        <label>Product Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <description>Quantity for type 1</description>
        <inlineHelpText>Quantity for type 1</inlineHelpText>
        <label>Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <description>Quantity for type 2</description>
        <inlineHelpText>Quantity for type 2</inlineHelpText>
        <label>Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <description>Quantity for type 3</description>
        <inlineHelpText>Quantity for type 3</inlineHelpText>
        <label>Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Id__c</fullName>
        <label>Rate Card Id</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Card__c</fullName>
        <label>Rate Card</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <description>Sale price</description>
        <label>Sale Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spotlight_Duration__c</fullName>
        <label>Spotlight Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spotlight_Quantity__c</fullName>
        <label>Spotlight Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Used_Factor__c</fullName>
        <label>Used Factor</label>
        <precision>10</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <description>Vehicle type for Spotlight</description>
        <inlineHelpText>Vehicle type for Spotlight Category</inlineHelpText>
        <label>Vehicle Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Rate Card Detail</label>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Card Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>